--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
+    "react-responsive": "^10.0.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0",
@@ -172,8 +173,8 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "i18next": "^25.2.1"
+    "react-dom": "^19.1.0"
   }
 }
