replace breadcrumb link item to link

--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.2.7",
+    "dgz-ui": "^1.2.8",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -154,6 +154,7 @@
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0",
