--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.2.9",
+    "dgz-ui": "^1.2.10",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -150,6 +150,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -179,6 +180,7 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
+    "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
