--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.2.11",
+    "dgz-ui": "^1.2.14",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -171,6 +171,7 @@
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
