--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dgz-ui",
     "ui-lib",
     "react.js",
-    "typescript"
+    "typescript",
+    "react-hook-form"
   ],
   "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
   "license": "MIT",
@@ -21,94 +22,94 @@
     "type": "git",
     "url": "git+https://github.com/Alisher1119/dgz-ui-shared.git"
   },
-  "main": "./dist/index.umd.js",
+  "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs.js"
     },
     "./components/form": {
       "types": "./dist/types/components/form/index.d.ts",
       "import": "./dist/components/form/index.es.js",
-      "require": "./dist/components/form/index.umd.js"
+      "require": "./dist/components/form/index.cjs.js"
     },
     "./components/confirm": {
       "types": "./dist/types/components/confirm/index.d.ts",
       "import": "./dist/components/confirm/index.es.js",
-      "require": "./dist/components/confirm/index.umd.js"
+      "require": "./dist/components/confirm/index.cjs.js"
     },
     "./components/datatable": {
       "types": "./dist/types/components/datatable/index.d.ts",
       "import": "./dist/components/datatable/index.es.js",
-      "require": "./dist/components/datatable/index.umd.js"
+      "require": "./dist/components/datatable/index.cjs.js"
     },
     "./components/datepicker": {
       "types": "./dist/types/components/datepicker/index.d.ts",
       "import": "./dist/components/datepicker/index.es.js",
-      "require": "./dist/components/datepicker/index.umd.js"
+      "require": "./dist/components/datepicker/index.cjs.js"
     },
     "./components/empty": {
       "types": "./dist/types/components/empty/index.d.ts",
       "import": "./dist/components/empty/index.es.js",
-      "require": "./dist/components/empty/index.umd.js"
+      "require": "./dist/components/empty/index.cjs.js"
     },
     "./components/filters": {
       "types": "./dist/types/components/filters/index.d.ts",
       "import": "./dist/components/filters/index.es.js",
-      "require": "./dist/components/filters/index.umd.js"
+      "require": "./dist/components/filters/index.cjs.js"
     },
     "./components/modal": {
       "types": "./dist/types/components/modal/index.d.ts",
       "import": "./dist/components/modal/index.es.js",
-      "require": "./dist/components/modal/index.umd.js"
+      "require": "./dist/components/modal/index.cjs.js"
     },
     "./components/pagination": {
       "types": "./dist/types/components/pagination/index.d.ts",
       "import": "./dist/components/pagination/index.es.js",
-      "require": "./dist/components/pagination/index.umd.js"
+      "require": "./dist/components/pagination/index.cjs.js"
     },
     "./components/scroll": {
       "types": "./dist/types/components/scroll/index.d.ts",
       "import": "./dist/components/scroll/index.es.js",
-      "require": "./dist/components/scroll/index.umd.js"
+      "require": "./dist/components/scroll/index.cjs.js"
     },
     "./components/tooltip": {
       "types": "./dist/types/components/tooltip/index.d.ts",
       "import": "./dist/components/tooltip/index.es.js",
-      "require": "./dist/components/tooltip/index.umd.js"
+      "require": "./dist/components/tooltip/index.cjs.js"
     },
     "./components/theme": {
       "types": "./dist/types/components/theme/index.d.ts",
       "import": "./dist/components/theme/index.es.js",
-      "require": "./dist/components/theme/index.umd.js"
+      "require": "./dist/components/theme/index.cjs.js"
     },
     "./enums": {
       "types": "./dist/types/enums/index.d.ts",
       "import": "./dist/enums/index.es.js",
-      "require": "./dist/enums/index.umd.js"
+      "require": "./dist/enums/index.cjs.js"
     },
     "./hooks": {
       "types": "./dist/types/hooks/index.d.ts",
       "import": "./dist/hooks/index.es.js",
-      "require": "./dist/hooks/index.umd.js"
+      "require": "./dist/hooks/index.cjs.js"
     },
     "./types": {
       "types": "./dist/types/types/index.d.ts",
       "import": "./dist/types/index.es.js",
-      "require": "./dist/types/index.umd.js"
+      "require": "./dist/types/index.cjs.js"
     },
     "./stores": {
       "types": "./dist/types/stores/index.d.ts",
       "import": "./dist/stores/index.es.js",
-      "require": "./dist/stores/index.umd.js"
+      "require": "./dist/stores/index.cjs.js"
     },
     "./providers": {
       "types": "./dist/types/providers/index.d.ts",
       "import": "./dist/providers/index.es.js",
-      "require": "./dist/providers/index.umd.js"
+      "require": "./dist/providers/index.cjs.js"
     },
     "./dist/dgz-ui-shared.css": "./dist/dgz-ui-shared.css"
   },
@@ -132,7 +133,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.2.17",
+    "dgz-ui": "^1.2.18",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
