--- a/package.json
+++ b/package.json
@@ -143,13 +143,13 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
     "i18next": "^25.2.1",
-    "lightgallery": "^2.9.0-beta.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
+    "react-image-gallery": "^1.4.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
@@ -168,6 +168,7 @@
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
