--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
     "dgz-ui": "^1.2.18",
+    "file-saver": "^2.0.5",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
@@ -164,6 +165,7 @@
     "@eslint/js": "^9.25.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.6",
