--- a/package.json
+++ b/package.json
@@ -149,14 +149,10 @@
     "dayjs": "^1.11.13",
     "dgz-ui": "^1.2.23",
     "file-saver": "^2.0.5",
-    "filepond-plugin-file-validate-size": "^2.2.8",
-    "filepond-plugin-file-validate-type": "^1.2.9",
-    "filepond-plugin-image-preview": "^4.6.12",
     "i18next": "^25.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
-    "react-filepond": "^7.1.3",
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
     "react-image-gallery": "^1.4.0",
@@ -203,6 +199,11 @@
     "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-filepond": "^7.1.3",
+    "filepond": "^4.32.8",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12"
   }
 }
