--- a/package.json
+++ b/package.json
@@ -196,14 +196,11 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "dayjs": "^1.11.13",
-    "i18next": "^25.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-filepond": "^7.1.3",
+    "dayjs": "^1.11.13",
+    "i18next": "^25.2.1",
     "filepond": "^4.32.8",
-    "filepond-plugin-file-validate-size": "^2.2.8",
-    "filepond-plugin-file-validate-type": "^1.2.9",
-    "filepond-plugin-image-preview": "^4.6.12"
+    "react-filepond": "^7.1.3"
   }
 }
