--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.3.0",
+    "dgz-ui": "^1.3.1",
     "file-saver": "^2.0.5",
     "i18next": "^25.2.1",
     "lodash": "^4.17.21",
@@ -196,11 +196,9 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
-    "filepond": "^4.32.8",
-    "react-filepond": "^7.1.3"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
