--- a/package.json
+++ b/package.json
@@ -100,6 +100,11 @@
       "import": "./dist/components/actions/index.es.js",
       "require": "./dist/components/actions/index.cjs.js"
     },
+    "./components/export": {
+      "types": "./dist/types/components/export/index.d.ts",
+      "import": "./dist/components/export/index.es.js",
+      "require": "./dist/components/export/index.cjs.js"
+    },
     "./enums": {
       "types": "./dist/types/enums/index.d.ts",
       "import": "./dist/enums/index.es.js",
