--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.1.29",
+  "version": "1.1.30",
   "type": "module",
   "files": [
     "dist"
@@ -198,6 +198,8 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
+    "i18next": "^25.2.1",
+    "react-i18next": "^15.5.2",
     "react": "^19.1.2",
     "react-dom": "^19.1.2"
   }
