--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.1.31",
+  "version": "1.1.32",
   "type": "module",
   "files": [
     "dist"
@@ -149,14 +149,14 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "dayjs": "^1.11.13",
-    "dgz-ui": "^1.3.18",
+    "dgz-ui": "^1.3.19",
     "file-saver": "^2.0.5",
-    "i18next": "^25.2.1",
+    "i18next": "^25.7.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.57.0",
-    "react-i18next": "^15.5.2",
+    "react-i18next": "^16.5.3",
     "react-image-gallery": "^1.4.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.2",
@@ -198,9 +198,9 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "i18next": "^25.2.1",
-    "react-i18next": "^15.5.2",
+    "i18next": "^25.7.4",
     "react": "^19.1.2",
-    "react-dom": "^19.1.2"
+    "react-dom": "^19.1.2",
+    "react-i18next": "^16.5.3"
   }
 }
