--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.1.40",
+  "version": "1.1.41",
   "type": "module",
   "files": [
     "dist"
@@ -148,18 +148,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
-    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
-    "next-themes": "^0.4.6",
     "react-hook-form": "^7.57.0",
-    "react-image-gallery": "^1.4.0",
     "react-responsive": "^10.0.1",
-    "react-router-dom": "^7.6.2",
-    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67",
@@ -168,13 +162,11 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
@@ -184,6 +176,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
+    "knip": "^5.82.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tslib": "^2.8.1",
@@ -195,7 +188,7 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "dgz-ui": "^1.3.23",
+    "dgz-ui": "^1.3.25",
     "react": "^19.1.2",
     "react-dom": "^19.1.2"
   }
