--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.1.41",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "author": "alisher1119",
+  "version": "1.1.42",
+  "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
   "keywords": [
     "shadcn/ui",
     "tailwindcss@4",
@@ -15,15 +11,14 @@
     "typescript",
     "react-hook-form"
   ],
-  "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alisher1119/dgz-ui-shared.git"
   },
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/types/index.d.ts",
+  "license": "MIT",
+  "author": "alisher1119",
+  "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -132,30 +127,31 @@
     },
     "./dist/dgz-ui-shared.css": "./dist/dgz-ui-shared.css"
   },
-  "sideEffects": false,
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
     "build": "vite build && tsc -b",
     "build:test": "npm run build && npm link",
-    "test": "vitest run",
-    "preview": "vite preview",
+    "dev": "vite",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "lint": "eslint ./src --fix --max-warnings 50",
-    "typecheck": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "preview": "vite preview",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.511.0",
-    "react-hook-form": "^7.57.0",
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.7",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
@@ -178,6 +174,8 @@
     "jsdom": "^26.1.0",
     "knip": "^5.82.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-packagejson": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.3.0",
@@ -188,7 +186,7 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "dgz-ui": "^1.3.25",
+    "dgz-ui": "^1.3.26",
     "react": "^19.1.2",
     "react-dom": "^19.1.2"
   }
