--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.1.50",
+  "version": "1.2.0",
   "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
   "keywords": [
     "shadcn/ui",
@@ -17,7 +17,9 @@
   },
   "license": "MIT",
   "author": "alisher1119",
-  "sideEffects": false,
+  "sideEffects": [
+    "**/*.css"
+  ],
   "type": "module",
   "exports": {
     ".": {
@@ -111,9 +113,7 @@
       "require": "./dist/hooks/index.cjs.js"
     },
     "./types": {
-      "types": "./dist/types/types/index.d.ts",
-      "import": "./dist/types/index.es.js",
-      "require": "./dist/types/index.cjs.js"
+      "types": "./dist/types/types/index.d.ts"
     },
     "./stores": {
       "types": "./dist/types/stores/index.d.ts",
@@ -125,7 +125,7 @@
       "import": "./dist/providers/index.es.js",
       "require": "./dist/providers/index.cjs.js"
     },
-    "./dist/dgz-ui-shared.css": "./dist/dgz-ui-shared.css"
+    "./styles.css": "./dist/style.css"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
@@ -134,20 +134,21 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build && tsc -b",
+    "build": "vite build",
     "build:test": "npm run build && npm link",
+    "clean": "rm -rf dist",
     "dev": "vite",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "lint": "eslint ./src --fix --max-warnings 50",
     "prepare": "husky",
+    "prepublishOnly": "npm run clean && npm run build",
     "preview": "vite preview",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/vite": "^4.1.7",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "react-responsive": "^10.0.1",
@@ -157,6 +158,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.17",
@@ -170,7 +172,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "knip": "^5.82.1",
     "prettier": "^3.5.3",
@@ -186,8 +187,31 @@
     "vitest": "^3.1.4"
   },
   "peerDependencies": {
-    "dgz-ui": "^1.3.26",
-    "react": "^19.1.2",
-    "react-dom": "^19.1.2"
+    "dayjs": "^1.11.19",
+    "dgz-ui": "^1.4.0",
+    "i18next": "^25.8.0",
+    "lucide-react": "^0.563.0",
+    "react": "^18.0.0 || ^19.0.1",
+    "react-dom": "^18.0.0 || ^19.0.1",
+    "react-hook-form": "^7.71.1",
+    "react-i18next": "^16.5.4",
+    "tailwindcss": "^4.1.18"
+  },
+  "peerDependenciesMeta": {
+    "dayjs": {
+      "optional": true
+    },
+    "i18next": {
+      "optional": true
+    },
+    "react-i18next": {
+      "optional": true
+    }
+  },
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
