--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
   "keywords": [
+    "dgz-ui",
+    "react-hook-form",
+    "react.js",
     "shadcn/ui",
     "tailwindcss@4",
-    "dgz-ui",
-    "ui-lib",
-    "react.js",
     "typescript",
-    "react-hook-form"
+    "ui-lib"
   ],
   "repository": {
     "type": "git",
@@ -27,10 +27,10 @@
       "import": "./dist/index.es.js",
       "require": "./dist/index.cjs.js"
     },
-    "./components/form": {
-      "types": "./dist/types/components/form/index.d.ts",
-      "import": "./dist/components/form/index.es.js",
-      "require": "./dist/components/form/index.cjs.js"
+    "./components/actions": {
+      "types": "./dist/types/components/actions/index.d.ts",
+      "import": "./dist/components/actions/index.es.js",
+      "require": "./dist/components/actions/index.cjs.js"
     },
     "./components/confirm": {
       "types": "./dist/types/components/confirm/index.d.ts",
@@ -52,10 +52,30 @@
       "import": "./dist/components/empty/index.es.js",
       "require": "./dist/components/empty/index.cjs.js"
     },
+    "./components/export": {
+      "types": "./dist/types/components/export/index.d.ts",
+      "import": "./dist/components/export/index.es.js",
+      "require": "./dist/components/export/index.cjs.js"
+    },
     "./components/filters": {
       "types": "./dist/types/components/filters/index.d.ts",
       "import": "./dist/components/filters/index.es.js",
       "require": "./dist/components/filters/index.cjs.js"
+    },
+    "./components/form": {
+      "types": "./dist/types/components/form/index.d.ts",
+      "import": "./dist/components/form/index.es.js",
+      "require": "./dist/components/form/index.cjs.js"
+    },
+    "./components/gallery": {
+      "types": "./dist/types/components/gallery/index.d.ts",
+      "import": "./dist/components/gallery/index.es.js",
+      "require": "./dist/components/gallery/index.cjs.js"
+    },
+    "./components/loader": {
+      "types": "./dist/types/components/loader/index.d.ts",
+      "import": "./dist/components/loader/index.es.js",
+      "require": "./dist/components/loader/index.cjs.js"
     },
     "./components/modal": {
       "types": "./dist/types/components/modal/index.d.ts",
@@ -72,35 +92,15 @@
       "import": "./dist/components/scroll/index.es.js",
       "require": "./dist/components/scroll/index.cjs.js"
     },
-    "./components/tooltip": {
-      "types": "./dist/types/components/tooltip/index.d.ts",
-      "import": "./dist/components/tooltip/index.es.js",
-      "require": "./dist/components/tooltip/index.cjs.js"
-    },
-    "./components/gallery": {
-      "types": "./dist/types/components/gallery/index.d.ts",
-      "import": "./dist/components/gallery/index.es.js",
-      "require": "./dist/components/gallery/index.cjs.js"
-    },
     "./components/theme": {
       "types": "./dist/types/components/theme/index.d.ts",
       "import": "./dist/components/theme/index.es.js",
       "require": "./dist/components/theme/index.cjs.js"
     },
-    "./components/loader": {
-      "types": "./dist/types/components/loader/index.d.ts",
-      "import": "./dist/components/loader/index.es.js",
-      "require": "./dist/components/loader/index.cjs.js"
-    },
-    "./components/actions": {
-      "types": "./dist/types/components/actions/index.d.ts",
-      "import": "./dist/components/actions/index.es.js",
-      "require": "./dist/components/actions/index.cjs.js"
-    },
-    "./components/export": {
-      "types": "./dist/types/components/export/index.d.ts",
-      "import": "./dist/components/export/index.es.js",
-      "require": "./dist/components/export/index.cjs.js"
+    "./components/tooltip": {
+      "types": "./dist/types/components/tooltip/index.d.ts",
+      "import": "./dist/components/tooltip/index.es.js",
+      "require": "./dist/components/tooltip/index.cjs.js"
     },
     "./enums": {
       "types": "./dist/types/enums/index.d.ts",
@@ -112,24 +112,49 @@
       "import": "./dist/hooks/index.es.js",
       "require": "./dist/hooks/index.cjs.js"
     },
-    "./types": {
-      "types": "./dist/types/types/index.d.ts"
+    "./providers": {
+      "types": "./dist/types/providers/index.d.ts",
+      "import": "./dist/providers/index.es.js",
+      "require": "./dist/providers/index.cjs.js"
     },
     "./stores": {
       "types": "./dist/types/stores/index.d.ts",
       "import": "./dist/stores/index.es.js",
       "require": "./dist/stores/index.cjs.js"
     },
-    "./providers": {
-      "types": "./dist/types/providers/index.d.ts",
-      "import": "./dist/providers/index.es.js",
-      "require": "./dist/providers/index.cjs.js"
+    "./types": {
+      "types": "./dist/types/types/index.d.ts"
     },
-    "./styles.css": "./dist/style.css"
+    "./styles.css": "./dist/styles.css"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types/index.d.ts"
+      ],
+      "components/*": [
+        "./dist/types/components/*/index.d.ts"
+      ],
+      "enums": [
+        "./dist/types/enums/index.d.ts"
+      ],
+      "hooks": [
+        "./dist/types/hooks/index.d.ts"
+      ],
+      "providers": [
+        "./dist/types/providers/index.d.ts"
+      ],
+      "stores": [
+        "./dist/types/stores/index.d.ts"
+      ],
+      "types": [
+        "./dist/types/types/index.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -188,11 +213,11 @@
   },
   "peerDependencies": {
     "dayjs": "^1.11.19",
-    "dgz-ui": "^1.4.0",
+    "dgz-ui": "^1.4.5",
     "i18next": "^25.8.0",
     "lucide-react": "^0.563.0",
-    "react": "^18.0.0 || ^19.0.1",
-    "react-dom": "^18.0.0 || ^19.0.1",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.4",
     "tailwindcss": "^4.1.18"
