--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dgz-ui-shared",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "description": "Custom ui library using React.js, Shadcn/ui, TailwindCSS, Typescript, dgz-ui library",
   "keywords": [
     "dgz-ui",
@@ -161,6 +161,7 @@
   "scripts": {
     "build": "vite build",
     "build:test": "npm run build && npm link",
+    "build-storybook": "storybook build",
     "clean": "rm -rf dist",
     "dev": "vite",
     "format": "prettier . --write",
@@ -169,6 +170,7 @@
     "prepare": "husky",
     "prepublishOnly": "npm run clean && npm run build",
     "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
     "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
@@ -179,6 +181,8 @@
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
@@ -187,7 +191,12 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^5.0.1",
     "@eslint/js": "^9.25.0",
+    "@storybook/addon-a11y": "^10.2.8",
+    "@storybook/addon-docs": "^10.2.8",
+    "@storybook/addon-vitest": "^10.2.8",
+    "@storybook/react-vite": "^10.2.8",
     "@tailwindcss/vite": "^4.1.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/file-saver": "^2.0.7",
@@ -196,18 +205,23 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "^3.1.4",
+    "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-storybook": "^10.2.8",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "knip": "^5.82.1",
+    "playwright": "^1.58.2",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-packagejson": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "storybook": "^10.2.8",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
